<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:titleTextColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/tv_CRP_AVG_Time"
            android:textColor="@color/back_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/tv_CRP_AVG_Time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:focusableInTouchMode="false"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="7:15 "
            android:textColor="@color/back_text"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/tv_CRP_EXP_Time"
            android:textColor="@color/back_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/tv_CRP_EXP_Time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:focusableInTouchMode="false"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="7:15 "
            android:textColor="@color/back_text"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/tv_CRP_Start_Date"
            android:textColor="@color/back_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/tv_CRP_Start_Date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:focusableInTouchMode="false"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="November 11 2015"
            android:textColor="@color/back_text"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_CRP_Plan_It"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/primary"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/btn_CRP_Plan_It" />

</LinearLayout>