<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:titleTextColor="@color/white"
        app:theme="@style/AppTheme.Toolbar"
        app:titleTextAppearance="@style/AppTheme.Toolbar.Title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/date"
                android:textColor="@color/back_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/alarm_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="sans-serif-condensed"
                android:text="November 11 2015"
                android:textColor="@color/back_text"
                android:textSize="16sp"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/time_morning"
                android:textColor="@color/back_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/alarm_time_morning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:focusableInTouchMode="false"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:textColor="@color/back_text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/time_evening"
                android:textColor="@color/back_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/alarm_time_evening"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:focusableInTouchMode="false"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:textColor="@color/back_text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/tune"
                android:textColor="@color/back_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/alarm_tune"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:focusableInTouchMode="false"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:textColor="@color/back_text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/increasing_vol"
                android:textColor="@color/back_text"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="fill_parent"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/alarm_increasing_vol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/repeat"
                android:textColor="@color/back_text"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="fill_parent"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/alarm_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alarm_repeat_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <ToggleButton
                android:id="@+id/alarm_repeat_sun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0dp"
                android:textOff="SUN"
                android:textOn="SUN" />

            <ToggleButton
                android:id="@+id/alarm_repeat_mon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0dp"
                android:textOff="MON"
                android:textOn="MON" />

            <ToggleButton
                android:id="@+id/alarm_repeat_tue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0dp"
                android:textOff="TUE"
                android:textOn="TUE" />

            <ToggleButton
                android:id="@+id/alarm_repeat_wed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0dp"
                android:textOff="WED"
                android:textOn="WED" />

            <ToggleButton
                android:id="@+id/alarm_repeat_thu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0dp"
                android:textOff="THU"
                android:textOn="THU" />

            <ToggleButton
                android:id="@+id/alarm_repeat_fri"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0dp"
                android:textOff="FRI"
                android:textOn="FRI" />

            <ToggleButton
                android:id="@+id/alarm_repeat_sat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="0dp"
                android:textOff="SAT"
                android:textOn="SAT" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/_protected"
                android:textColor="@color/back_text"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="fill_parent"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/alarm_protected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/alarm_save"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:layout_weight="3"
                android:background="@color/primary"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/alarm_save" />

            <Button
                android:id="@+id/alarm_remove"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:layout_weight="3"
                android:background="@color/primary"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/alarm_remove" />
        </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>